--- a/tutorials/py_programming_for_finance/01_Getting_Stock_Prices.ipynb
+++ b/tutorials/py_programming_for_finance/01_Getting_Stock_Prices.ipynb
@@ -264,111 +264,11 @@
    "execution_count": 6,
    "id": "c8f3b323",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Open</th>\n",
-       "      <th>High</th>\n",
-       "      <th>Low</th>\n",
-       "      <th>Close</th>\n",
-       "      <th>Volume</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2015-01-02</th>\n",
-       "      <td>14.858000</td>\n",
-       "      <td>14.883333</td>\n",
-       "      <td>14.217333</td>\n",
-       "      <td>14.620667</td>\n",
-       "      <td>71466000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-01-05</th>\n",
-       "      <td>14.303333</td>\n",
-       "      <td>14.433333</td>\n",
-       "      <td>13.810667</td>\n",
-       "      <td>14.006000</td>\n",
-       "      <td>80527500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-01-06</th>\n",
-       "      <td>14.004000</td>\n",
-       "      <td>14.280000</td>\n",
-       "      <td>13.614000</td>\n",
-       "      <td>14.085333</td>\n",
-       "      <td>93928500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-01-07</th>\n",
-       "      <td>14.223333</td>\n",
-       "      <td>14.318667</td>\n",
-       "      <td>13.985333</td>\n",
-       "      <td>14.063333</td>\n",
-       "      <td>44526000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015-01-08</th>\n",
-       "      <td>14.187333</td>\n",
-       "      <td>14.253333</td>\n",
-       "      <td>14.000667</td>\n",
-       "      <td>14.041333</td>\n",
-       "      <td>51637500</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 Open       High        Low      Close    Volume\n",
-       "Date                                                            \n",
-       "2015-01-02  14.858000  14.883333  14.217333  14.620667  71466000\n",
-       "2015-01-05  14.303333  14.433333  13.810667  14.006000  80527500\n",
-       "2015-01-06  14.004000  14.280000  13.614000  14.085333  93928500\n",
-       "2015-01-07  14.223333  14.318667  13.985333  14.063333  44526000\n",
-       "2015-01-08  14.187333  14.253333  14.000667  14.041333  51637500"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# df.reset_index(inplace=True)\n",
     "# df.set_index(\"Date\", inplace=True)\n",
-    "# df = df.drop(\"Symbol\", axis=1)\n",
-    "df.drop(\"Close\", axis=1, inplace=True)\n",
-    "df.rename(columns={'Adj Close': 'Close'}, inplace=True)\n",
-    "\n",
-    "df.head()"
+    "# df = df.drop(\"Symbol\", axis=1)"
    ]
   },
   {
@@ -413,57 +313,66 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Date</th>\n",
        "      <th>Open</th>\n",
        "      <th>High</th>\n",
        "      <th>Low</th>\n",
        "      <th>Close</th>\n",
+       "      <th>Adj Close</th>\n",
        "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2015-01-02</td>\n",
+       "      <th>2015-01-02</th>\n",
        "      <td>14.858000</td>\n",
        "      <td>14.883333</td>\n",
        "      <td>14.217333</td>\n",
        "      <td>14.620667</td>\n",
+       "      <td>14.620667</td>\n",
        "      <td>71466000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2015-01-05</td>\n",
+       "      <th>2015-01-05</th>\n",
        "      <td>14.303333</td>\n",
        "      <td>14.433333</td>\n",
        "      <td>13.810667</td>\n",
        "      <td>14.006000</td>\n",
+       "      <td>14.006000</td>\n",
        "      <td>80527500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2015-01-06</td>\n",
+       "      <th>2015-01-06</th>\n",
        "      <td>14.004000</td>\n",
        "      <td>14.280000</td>\n",
        "      <td>13.614000</td>\n",
        "      <td>14.085333</td>\n",
+       "      <td>14.085333</td>\n",
        "      <td>93928500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2015-01-07</td>\n",
+       "      <th>2015-01-07</th>\n",
        "      <td>14.223333</td>\n",
        "      <td>14.318667</td>\n",
        "      <td>13.985333</td>\n",
        "      <td>14.063333</td>\n",
+       "      <td>14.063333</td>\n",
        "      <td>44526000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2015-01-08</td>\n",
+       "      <th>2015-01-08</th>\n",
        "      <td>14.187333</td>\n",
        "      <td>14.253333</td>\n",
        "      <td>14.000667</td>\n",
+       "      <td>14.041333</td>\n",
        "      <td>14.041333</td>\n",
        "      <td>51637500</td>\n",
        "    </tr>\n",
@@ -472,12 +381,13 @@
        "</div>"
       ],
       "text/plain": [
-       "        Date       Open       High        Low      Close    Volume\n",
-       "0 2015-01-02  14.858000  14.883333  14.217333  14.620667  71466000\n",
-       "1 2015-01-05  14.303333  14.433333  13.810667  14.006000  80527500\n",
-       "2 2015-01-06  14.004000  14.280000  13.614000  14.085333  93928500\n",
-       "3 2015-01-07  14.223333  14.318667  13.985333  14.063333  44526000\n",
-       "4 2015-01-08  14.187333  14.253333  14.000667  14.041333  51637500"
+       "                 Open       High        Low      Close  Adj Close    Volume\n",
+       "Date                                                                       \n",
+       "2015-01-02  14.858000  14.883333  14.217333  14.620667  14.620667  71466000\n",
+       "2015-01-05  14.303333  14.433333  13.810667  14.006000  14.006000  80527500\n",
+       "2015-01-06  14.004000  14.280000  13.614000  14.085333  14.085333  93928500\n",
+       "2015-01-07  14.223333  14.318667  13.985333  14.063333  14.063333  44526000\n",
+       "2015-01-08  14.187333  14.253333  14.000667  14.041333  14.041333  51637500"
       ]
      },
      "execution_count": 7,
@@ -497,9 +407,6 @@
     "start = dt.datetime(2015, 1, 1)\n",
     "end = dt.datetime.now()\n",
     "df = yf.download('TSLA', start=start, end=end)\n",
-    "df.reset_index(inplace=True)\n",
-    "df.drop(\"Close\", axis=1, inplace=True)\n",
-    "df.rename(columns={'Adj Close': 'Close'}, inplace=True)\n",
     "\n",
     "df.head()"
    ]
